# async-api

./: .env.example  .gitignore  .pre-commit-config.yam  CHANGELOG.md  Dockerfile  Dockerfile.dev  Makefile  README.md  alembic.ini  docker-compose.yml  listener.sh  pyproject.toml  test-minimal-deployment.yaml  test-minimal-job.yaml  test-values.yaml  worker-config-summary.yaml
api/: listener.py  logging_config.py  main.py
api/api/v1/routes/: health.py  metrics.py  services.py  status.py  tasks.py
api/core/: config.py  database.py  exception_handlers.py  logger.py  security.py  utils.py
api/core/brokers/: __init__.py  base.py  rabbitmq.py
api/crud/: metrics_repository.py  task.py
api/models/: task.py
api/repositories/: __init__.py  client_config_repository.py  metrics_repository.py  services_config_repository.py  task_repository.py
api/schema/: errors.py  health.py  service.py  task.py
api/schemas/: __init__.py  callback.py  enum.py  errors.py  queue.py  service.py  status.py  task.py
api/service/: __init__.py  queue_service.py  service_service.py  task_service.py
api/services/: __init__.py  client_service.py  metrics_service.py  queue_service.py  service_service.py  task_service.py
app/: main.py
app/api/v1/routes/: health.py  services.py  tasks.py
app/core/: config.py  database.py  utils.py
app/core/brokers/: rabbitmq.py
app/crud/: task.py
app/models/: task.py
app/schema/: __init__.py  broker.py  enum.py  errors.py  queue.py  task.py
app/service/: __init__.py  queue_service.py  service_service.py  task_service.py
chart/: Chart.yaml  README.md  values.yaml
chart/charts/: rabbitmq-16.0.11.tgz
chart/templates/: _connection_helpers.tpl  _helpers.tpl
chart/templates/api/: broker-secret.yaml  database-secret.yaml  deployment.yaml  secret.yaml
chart/templates/api/config/: clients-configmap.yaml  db.yaml  extra_secret.yaml  schemas-configmap.yaml  services-configmap.yaml
chart/templates/api/env/: configmap-api.yaml  configmap-listener.yaml  env-configmap.yaml
chart/templates/api/network/: service.yaml
chart/templates/api/rbac/: clusterrole.yaml
chart/templates/worker/: clusterrole.yaml  clusterrolebinding.yaml  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  kedascaler.yaml  metrics.yaml  networkpolicy.yaml  pdb.yaml  pullsecret.yml  role.yaml  rolebinding.yaml  secret.yaml  service.yaml  serviceaccount.yaml  servicemonitor.yaml
chart/templates/workers/: broker-secret-worker.yaml  configmap.yaml  deployment.yaml  env-configmap.yaml  job.yaml  keda-secret.yaml  kedascaler.yaml  rbac.yaml  secret.yaml  service.yaml  servicemonitor.yaml  triggerauthentication.yaml
config/: clients.yaml  services.yaml
docs/: api.http  dat.md  migrations.md
docs/images/: asynchrone.md
json_schemas/: example.json
listener/: main.py
listener/core/: di_container.py  logger.py  task_aware_async_session.py
listener/services/: app.py  health_check.py  message_service.py  notifier_service.py  queue_listener.py
listener/services/notifiers/: amqp_notifier.py  http_notifier.py
migration/: env.py
migrations/: env.py
migrations/versions/: 40eb0c23e103_first_revision.py
scripts/: entrypoint.sh  entrypoint_dev.sh  run_migrations.py
src/schemas/: service.py
test/api/repositories/: test_clients_config_service.py  test_services_config_repository.py
test/api/services/: test_service_service.py
test/resources/: bad_schema.json  clients.yaml  services.yaml
tests/: conftest.py
tests/api/core/: test_config.py  test_security.py
tests/api/repositories/: test_clients_config_service.py  test_metrics_repository.py  test_services_config_repository.py  test_task_repository.py
tests/api/services/: test_client_service.py  test_service_service.py  test_task_service.py
tests/listener/core/: test_di_container.py  test_task_aware_async_session.py
tests/listener/service/: test_message_service.py  test_notification_service.py
tests/resources/: bad_yaml.yaml  clients.yaml  services.yaml  services_bad_schema.yaml
tests/src/: test_schema_service.py
tests/utils/: session_fixture.py
workers/js/: Dockerfile  index.js  package.json
workers/python/: demo.py  pyproject.toml  worker.py
workers/ts/: index.ts  package.json  tsconfig.json  worker.ts
