[project]
name = "AsyncTaskAPI"
version = "0.1.0"
description = "Generic api for async tasks"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.16.2",
    "fastapi>=0.115.13",
    "kombu>=5.5.4",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.9.1",
    "requests>=2.32.4",
    "sqlalchemy[asyncio]>=2.0.41",
    "sqlmodel>=0.0.24",
    "toml>=0.10.2",
    "uvicorn>=0.34.3",
    "jsonschema>=4.22.0",
    "asyncpg>=0.30.0",
    "prometheus-client>=0.18.0",
    "prometheus-fastapi-instrumentator>=7.1.0",
    "pyyaml>=6.0.2",
    "aio-pika>=9.5.5",
    "aiohttp>=3.12.13",
]

[dependency-groups]
dev = [
    "aiosqlite>=0.21.0",
    "coverage>=7.9.1",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
]

[tool.coverage.run]
source = [
    ".",
]
command_line = "-m pytest --junitxml=junit.xml"
omit = [
    "tests/*",
]

[tool.coverage.report]
skip_covered = true
precision = 2
sort = "-miss"